--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
   - postgresql
 before_script:
   - psql -f application/db/install.sql -U postgres
-  - PGPASSWORD=marcus psql -d application -f application/db/structure.sql -U marcus
-  - PGPASSWORD=marcus psql -d application -f application/db/data.sql -U marcus
+  - PGPASSWORD=nolik psql -d wave -f application/db/structure.sql -U nolik
+  - PGPASSWORD=nolik psql -d wave -f application/db/data.sql -U nolik
 script:
   - npm test
